corrected footer and buttons on tablets

--- a/dev/blocks/big-team/big-team-desktop.scss
+++ b/dev/blocks/big-team/big-team-desktop.scss
@@ -494,6 +494,10 @@
     margin-top: rem(70px);
     margin-right: auto;
     margin-left: auto;
+
+    &:hover{
+      transform: scaleX(1.05) !important;
+    }
   }
 }
 
