--- a/dev/blocks/our-team-footer/our-team-footer-tablet.scss
+++ b/dev/blocks/our-team-footer/our-team-footer-tablet.scss
@@ -4,9 +4,10 @@
     padding-top: rem(48px);
 
     &::after {
-      width: rem(187px);
-      height: rem(800px);
-      background-size: auto rem(800px);
+      width: 12.6875rem;
+      height: 50rem;
+      right: 0;
+      background-size: auto 50rem;
     }
   }
 
